--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "move-cli": "^1.2.0",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^0.67.4"
   },
   "engines": {
     "node": ">= 6"
