--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "chai": "^4.0.2",
+    "del-cli": "^1.1.0",
+    "merge-dirs": "^0.2.1",
     "mocha": "^3.4.2",
-    "move-cli": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^0.67.4"
   },
@@ -21,9 +22,10 @@
   },
   "scripts": {
     "babel": "babel dist --out-dir dist",
-    "build": "npm-run-all rollup babel move",
-    "move": "move-cli dist/parseMetaRefresh.js ../BSI/modules/metaRefresh/parse/parse.js",
-    "rollup": "rollup -c",
+    "BSI:build": "npm-run-all BSI:rollup babel BSI:merge BSI:clean",
+    "BSI:clean": "del-cli dist/BSI",
+    "BSI:merge": "merge-dirs dist/BSI ../BSI",
+    "BSI:rollup": "rollup -c",
     "test": "mocha test.js --reporter=spec --check-leaks --bail"
   },
   "files": [
