--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "stevenvachon/http-equiv-refresh",
   "devDependencies": {
     "chai": "^4.0.2",
+    "esm": "^3.0.84",
     "mocha": "^3.4.2"
   },
   "engines": {
